--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <div id="logo">
             <img src="logo/IMG-20210710-WA0122.jpg" alt="logo">
         </div>
+        <nav>
+            <ul>
+                <li>Acceuil</li>
+                <li>Menu</li>
+                <li>Service</li>
+            </ul>
+        </nav>
     </header>
     
 </body>
